Unified: Get default focus on detailed view.

In UnifiedSystemTray, detailed view did not get focus when it is
transitioned by keyboard.

TEST=manual
BUG=862504

Change-Id: I9f39359d3fa72be4bff5d42e5a9f98144b1a1bad
Reviewed-on: https://chromium-review.googlesource.com/1132899
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574461}
Former-commit-id: 704db340a765dc9972c0018b74fbb2908cb04d0c