ash/system/tray/tray_detailed_view.cc
@@ -469,4 +469,9 @@ int TrayDetailedView::GetHeightForWidth(int width) const {
   return height();
 }
 
+void TrayDetailedView::RequestFocus() {
+  if (back_button_)
+    back_button_->RequestFocus();
+}
+
 }  // namespace ash
