ash/system/unified/unified_system_tray_view.cc
@@ -200,6 +200,8 @@ void UnifiedSystemTrayView::SetDetailedView(views::View* detailed_view) {
   detailed_view_container_->SetPreferredSize(system_tray_size);
   detailed_view->InvalidateLayout();
   Layout();
+
+  detailed_view->RequestFocus();
 }
 
 void UnifiedSystemTrayView::ResetDetailedView() {
